clear chart code + add resize support

--- a/graph.html
+++ b/graph.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <svg-chart style="height: 150px;width: 500px;display: block;resize: both;overflow: hidden;border: 1px solid black;position: relative;"></svg-chart>
+    <svg-chart style="resize: both;border: 1px solid black;"></svg-chart>
 
 </body>
 
