--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>Document</title>
 
     <link href="node_modules/gridstack/dist/gridstack.min.css" rel="stylesheet"/>
-    <link href="node_modules/gridstack/dist/gridstack.min.css" rel="stylesheet"/>
     <link href="node_modules/gridstack/dist/gridstack-extra.min.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
-    <script src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="/styles/context.css">
+
+    <script src="/index.js" type="module"></script>
 </head>
 <body>
+
+    <div id="menu">
+        <ul>
+            <li><button>Edit</button></li>
+            <li><button>Delete</button></li>
+            <hr noshade>
+            <li><button>hide</button></li>
+        </ul>
+    </div>
 
     <div class="grid grid-stack">
 
