context menu changes

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <div id="menu">
         <ul>
-            <li><button>Edit</button></li>
-            <li><button>Delete</button></li>
+            <li><button data-name="edit">Edit</button></li>
+            <li><button data-name="delete">Delete</button></li>
             <hr noshade>
-            <li><button>hide</button></li>
+            <li data-name="hide"><button>hide</button></li>
         </ul>
     </div>
 
