--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link href="node_modules/gridstack/dist/gridstack.min.css" rel="stylesheet"/>
-    <link href="node_modules/gridstack/dist/gridstack-extra.min.css" rel="stylesheet"/>
+    <link href="./node_modules/gridstack/dist/gridstack.min.css" rel="stylesheet"/>
+    <link href="./node_modules/gridstack/dist/gridstack-extra.min.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
-    <link rel="stylesheet" href="/styles/context.css">
+    <link rel="stylesheet" href="./styles/context.css">
 
-    <script src="/index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
 </head>
 <body>
 
