--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,20 @@
     <div class="grid grid-stack">
 
     </div>
+
+    <svg style="display: none;" viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'>
+        <defs>
+            <filter id="noise">
+                <feTurbulence
+                    baseFrequency="2.5"
+                    seed="100"
+                    type="fractalNoise"
+                    result="static">
+                </feTurbulence>
+                <feComposite  in="SourceGraphic" operator="arithmetic" k1="0.2" k2="1.0"/>
+            </filter>  
+        </defs>
+    </svg>
     
 </body>
 </html>
