--- a/client/index.html
+++ b/client/index.html
@@ -17,8 +17,11 @@
 </head>
 <body>
 
-    <div class="grid grid-stack">
-    </div>
+
+
+    <widget-grid cell-size="100" class="grid">
+
+    </widget-grid>
 
     <svg style="display: none;" viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'>
         <defs>
