--- a/client/index.html
+++ b/client/index.html
@@ -14,15 +14,30 @@
 </head>
 <body>
 
-    <div class="sidebar">
-        <button class="settings">
-            <svg style="height: 3em; width: 3em;"><use href="#window-settings"></use></svg>
+    <aside class="sidebar">
+        <button id="btn-layout-home">
+            <svg><use href="#icon-home"></use></svg>
         </button>
-    </div>
+        <button id="btn-layout-settings">
+            <svg><use href="#icon-settings"></use></svg>
+        </button>
+    </aside>
 
-    <widget-grid cell-size="100" class="grid">
+    <layout-viewport active="widget-grid" data-name="app-viewport">
 
-    </widget-grid>
+        <section data-name="widget-grid">
+            <widget-grid cell-size="100" class="grid" data-context-menu="main"></widget-grid>
+        </section>
+
+        <section data-name="settings">
+            <div style="height: calc(100% - (1em * 2));padding: 1em;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae rerum atque accusantium tenetur magnam asperiores odio. Quam sint, rem, eaque suscipit perferendis, voluptatem ad eum vitae quisquam maiores provident magnam.
+            </div>
+        </section>
+
+    </layout-viewport>
+
+    
 
     <svg style="display: none;" viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'>
         <defs>
@@ -38,8 +53,12 @@
         </defs>
 
 
-        <symbol id="window-settings" viewBox="0 0 30 30">
-            <path d="M22 16.3V13.7H19.8C19.7 13.3 19.5 12.9 19.3 12.5L20.9 10.9L19 9.1L17.4 10.7C17 10.5 16.6 10.3 16.2 10.2V8H13.6V10.2C13.2 10.3 12.8 10.5 12.4 10.7L11 9.1L9.1 11L10.7 12.6C10.5 13 10.3 13.4 10.2 13.8H8V16.4H10.2C10.3 16.8 10.5 17.2 10.7 17.6L9.1 19L10.9 20.8L12.5 19.2C12.9 19.4 13.3 19.6 13.7 19.7V22H16.3V19.8C16.7 19.7 17.1 19.5 17.5 19.3L19.1 20.9L20.9 19.1L19.3 17.5C19.5 17.1 19.7 16.7 19.8 16.3H22ZM15 17.8C13.5 17.8 12.2 16.6 12.2 15C12.2 13.5 13.4 12.2 15 12.2C16.6 12.2 17.8 13.4 17.8 15C17.8 16.5 16.5 17.8 15 17.8Z"/>
+        <symbol id="icon-settings" viewBox="0 96 960 960">
+            <path d="m388 976-20-126q-19-7-40-19t-37-25l-118 54-93-164 108-79q-2-9-2.5-20.5T185 576q0-9 .5-20.5T188 535L80 456l93-164 118 54q16-13 37-25t40-18l20-127h184l20 126q19 7 40.5 18.5T669 346l118-54 93 164-108 77q2 10 2.5 21.5t.5 21.5q0 10-.5 21t-2.5 21l108 78-93 164-118-54q-16 13-36.5 25.5T592 850l-20 126H388Zm92-270q54 0 92-38t38-92q0-54-38-92t-92-38q-54 0-92 38t-38 92q0 54 38 92t92 38Z"/>
+        </symbol>
+
+        <symbol id="icon-home" viewBox="0 96 960 960">
+            <path d="M160 936V456l320-240 320 240v480H560V656H400v280H160Z"/>
         </symbol>
     </svg>
     
