start working on widget creation menu

--- a/client/index.html
+++ b/client/index.html
@@ -93,5 +93,20 @@
         </symbol>
     </svg>
     
+    <template id="t">
+        <div style="display: flex;flex-direction: column;height: 100%;gap: 1em">
+            <h1>Add new widget</h1>
+            <select>
+                <option value="">widget 1</option>
+                <option value="">widget 2</option>
+                <option value="">widget 3</option>
+            </select>
+            <textarea style="flex-grow: 1;resize: none;"></textarea>
+            <div style="display: flex;flex-direction: row-reverse;">
+                <button>create</button>
+            </div>
+        </div>
+    </template>
+
 </body>
 </html>
