--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,8 @@
     <script type="importmap">
         {
           "imports": {
-            "#lang": "./src/lang.js"
+            "#lang": "./src/lang.js",
+            "#utilities": "./src/utilities.js"
           }
         }
     </script>
@@ -92,21 +93,6 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M9.81056 2.75746C9.92185 2.3123 10.3218 2 10.7807 2H13.2191C13.678 2 14.078 2.3123 14.1893 2.75746L14.9076 5.63058C15.3144 5.8166 15.7003 6.04045 16.0608 6.29764L18.9099 5.48263C19.351 5.35643 19.8215 5.54668 20.0509 5.94407L21.2701 8.05583C21.4996 8.45322 21.4291 8.95576 21.0992 9.27473L18.9687 11.3347C18.9894 11.5537 18.9999 11.7756 18.9999 12C18.9999 12.2246 18.9894 12.4466 18.9687 12.6658L21.0985 14.7252C21.4284 15.0441 21.4989 15.5467 21.2694 15.9441L20.0502 18.0558C19.8208 18.4532 19.3503 18.6435 18.9092 18.5173L16.0607 17.7024C15.7002 17.9596 15.3144 18.1834 14.9076 18.3694L14.1893 21.2425C14.078 21.6877 13.678 22 13.2191 22H10.7807C10.3218 22 9.92185 21.6877 9.81056 21.2425L9.09228 18.3694C8.68548 18.1834 8.2996 17.9596 7.93914 17.7024L5.09069 18.5173C4.64952 18.6435 4.17907 18.4532 3.94963 18.0558L2.73041 15.9441C2.50098 15.5467 2.57144 15.0441 2.90132 14.7252L5.03117 12.6658C5.0105 12.4466 4.99992 12.2246 4.99992 12C4.99992 11.7756 5.01048 11.5537 5.03112 11.3347L2.90062 9.27473C2.57074 8.95576 2.50027 8.45322 2.72971 8.05583L3.94893 5.94407C4.17836 5.54668 4.64881 5.35643 5.08998 5.48263L7.93904 6.29764C8.29953 6.04045 8.68545 5.8166 9.09228 5.63058L9.81056 2.75746ZM12 15C10.3431 15 9 13.6569 9 12C9 10.3431 10.3431 9 12 9C13.6569 9 15 10.3431 15 12C15 13.6569 13.6569 15 12 15Z"/>
         </symbol>
     </svg>
-    
-    <template id="t">
-        <div style="display: flex;flex-direction: column;height: 100%;gap: 1em">
-            <h1>Add new widget</h1>
-            <select>
-                <option value="">widget 1</option>
-                <option value="">widget 2</option>
-                <option value="">widget 3</option>
-            </select>
-            <textarea style="flex-grow: 1;resize: none;"></textarea>
-            <div style="display: flex;flex-direction: row-reverse;">
-                <button>create</button>
-            </div>
-        </div>
-    </template>
 
 </body>
 </html>
