new modules system

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
         </div>
     </aside>
 
-    <layout-viewport active="widget-grid" data-name="app-viewport">
+    <layout-viewport data-active="widget-grid" data-name="app-viewport">
 
         <section data-name="widget-grid">
             <widget-grid cell-size="100" class="grid" data-context-menu="main"></widget-grid>
