--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="theme-color" content="dark light" />
     
     <link rel="manifest" href="./manifest.webmanifest">
 
     <title>Document</title>
-
+    <link rel="stylesheet" href="./src/moduleLoader/style.css">
     <link rel="stylesheet" href="./styles/style.css">
 
     <link rel="stylesheet" href="./styles/context.css">
@@ -59,7 +61,15 @@
 
     </layout-viewport>
 
-    
+    <dialog id="loader-config-modal">
+        <h2>Loader config</h2>
+        <div class="content"></div>
+        <div>
+            <button class="add">add</button>
+            <button class="save">save</button>
+            <button class="close">close</button>
+        </div>
+    </dialog>
 
     <svg style="display: none;" viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'>
         <defs>
